tests/specs/npm/check_all_local/main_local.out
Download http://localhost:4260/@denotest%2fcheck-error
Download http://localhost:4260/@denotest/check-error/1.0.0.tgz
Check file:///[WILDCARD]/main.ts
TS2339 [ERROR]: Property 'Asdf' does not exist on type 'typeof import("file:///[WILDCARD]/@denotest/check-error/1.0.0/index.d.ts")'.
console.log(test.Asdf); // should error
                 ~~~~
    at file:///[WILDCARD]/main.ts:3:18

error: Type checking failed.
